--- a/src/app/topics/bootstrapinginangular/bootstrapinginangular.component.html
+++ b/src/app/topics/bootstrapinginangular/bootstrapinginangular.component.html
@@ -1,8 +1,21 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>what is bootstrapping in angular?</h2>
-      <a href="https://medium.com/learnwithrahul/ways-of-bootstrapping-angular-applications-d379f594f604" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>what is bootstrapping in angular?</h2>
+    <a href="https://medium.com/learnwithrahul/ways-of-bootstrapping-angular-applications-d379f594f604"
+      target="_blank">I read this article here</a>
+
+    <hr>
+    <p>Bootstrapping is an essential process in Angular - it is where the application is loaded when Angular comes to
+      life. It is a technique of initializing or loading our Angular application.
+    </p>
+    <p> Refer main.ts of this codebase and check line no 11.</p>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://www.tektutorialshub.com/angular/angular-bootstrapping-application/"
+      target="_blank">tektutorialshub</a><br />
+    <a href="https://angular-2-training-book.rangle.io/bootstrapping"
+      target="_blank">rangle</a>
+
+  </div>
 </main>
