--- a/src/app/topics/callback/callback.component.html
+++ b/src/app/topics/callback/callback.component.html
@@ -2,7 +2,26 @@
     <div class="container-fluid default-bar">
       <h2>what is callback? what are their practical usage? please provide examples</h2>
       <hr>
-      <a href="https://medium.com/developers-tomorrow/google-javascript-technical-interview-7a20accd6ddf" target="_blank">I read this article here</a>
+     
+      <p>
+        JavaScript runs code sequentially in top-down order. However, there are some cases that code runs (or must run) after something else happens and also not sequentially. This is called asynchronous programming.
+      </p>
+
+
+      <p>
+        Callbacks make sure that a function is not going to run before a task is completed but will run right after the task has completed. It helps us develop asynchronous JavaScript code and keeps us safe from problems and errors.
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/js-callback" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/callbacks-demo" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.freecodecamp.org/news/javascript-callback-functions-what-are-callbacks-in-js-and-how-to-use-them/" target="_blank">javascript.info</a></li>
+          <li><a href="https://javascript.info/callbacks" target="_blank">mozilla</a></li>
+      </ul>
     </div>
 </main>
  
