--- a/src/app/topics/debouncetimevsthrottletime/debouncetimevsthrottletime.component.html
+++ b/src/app/topics/debouncetimevsthrottletime/debouncetimevsthrottletime.component.html
@@ -1,7 +1,17 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>example of debouncetime and throttletime? what are their practical usage? please provide examples</h2>
-      <a href="https://levelup.gitconnected.com/rxjs-operators-throttletime-and-debouncetime-b2ec49cbf1e7" target="_blank">I read this article here</a>
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>example of debouncetime and throttletime? what are their practical usage? please provide examples</h2>
+    <a href="https://levelup.gitconnected.com/rxjs-operators-throttletime-and-debouncetime-b2ec49cbf1e7"
+      target="_blank">I read this article here</a>
+    <hr>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QbNUD5ca99A" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://namitamalik.github.io/throttleTime-vs-debounceTime-in-RxJS/"
+      target="_blank">namitamalik.github</a><br />
+    <a href="https://levelup.gitconnected.com/rxjs-operators-throttletime-and-debouncetime-b2ec49cbf1e7"
+      target="_blank">levelup.gitconnected</a>
+
+  </div>
 </main>
