--- a/src/app/topics/differencengcontent/differencengcontent.component.html
+++ b/src/app/topics/differencengcontent/differencengcontent.component.html
@@ -1,8 +1,19 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>What are ng-container, ng-content and ng-template?</h2>
-      <a href="https://codeburst.io/angular-interview-question-what-are-ng-container-ng-content-and-ng-template-9fafbbc255d5" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>What are ng-container, ng-content and ng-template?</h2>
+    <a href="https://codeburst.io/angular-interview-question-what-are-ng-container-ng-content-and-ng-template-9fafbbc255d5"
+      target="_blank">I read this article here</a>
+
+    <hr>
+
+    <iframe src="https://player.vimeo.com/video/200349493" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://www.freecodecamp.org/news/everything-you-need-to-know-about-ng-template-ng-content-ng-container-and-ngtemplateoutlet-4b7b51223691/"
+      target="_blank">freecodecamp</a><br />
+    <a href="https://blog.angular-university.io/angular-ng-template-ng-container-ngtemplateoutlet/"
+      target="_blank">angular-university</a>
+      <a href="http://nataliesmith.ca/blog/2018-05-01-ngtemplate-ngcontainer-ngcontent/" target="_blank">nataliesmith</a>
+  </div>
 </main>
