--- a/src/app/topics/generators-es6/generators-es6.component.html
+++ b/src/app/topics/generators-es6/generators-es6.component.html
@@ -1,8 +1,21 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>What is a generators in ES6. How would you use it?. what are their practical usage</h2>
-      <a href="https://medium.com/@digilifecz123/understanding-generators-in-es6-javascript-d5eacb4cbb94" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>What is a generators in ES6. How would you use it?. what are their practical usage</h2>
+    <a href="https://medium.com/@digilifecz123/understanding-generators-in-es6-javascript-d5eacb4cbb94"
+      target="_blank">I read this article here</a>
+
+    <hr>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QO07THdLWQo" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EzdgkEMvrvA" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://codeburst.io/understanding-generators-in-es6-javascript-with-examples-6728834016d5" target="_blank">codeburst</a><br />
+    <a href="https://www.codingame.com/playgrounds/6725/introduction-to-generators-in-es6" target="_blank">codingame</a><br />
+
+  </div>
 </main>
