--- a/src/app/topics/hostlistenerbinding/hostlistenerbinding.component.html
+++ b/src/app/topics/hostlistenerbinding/hostlistenerbinding.component.html
@@ -1,8 +1,29 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>What is Host Listner and Host Binding? What is a good use case example?</h2>
-      <a href="https://medium.com/@nishu0505/custom-directives-in-angular-5a843f76bb96" target="_blank">I read this article here</a>
-      <a href="https://medium.com/@jhapriti09/what-are-hostbinding-and-hostlistener-in-angular-8-41b41f53bd7a" target="_blank">I read this article here</a>
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>What is Host Listner and Host Binding? What is a good use case example?</h2>
+    <!-- <a href="https://medium.com/@nishu0505/custom-directives-in-angular-5a843f76bb96" target="_blank">I read this article here</a>
+      <a href="https://medium.com/@jhapriti09/what-are-hostbinding-and-hostlistener-in-angular-8-41b41f53bd7a" target="_blank">I read this article here</a> -->
+    <hr>
+    <h4>HostListener:</h4>
+    <p>Decorator that declares a DOM event to listen for, and provides a handler method to run when that event occurs.
+    </p>
+    <h4>HostBinding:</h4>
+    <p>Decorator that marks a DOM property as a host-binding property and supplies configuration metadata. Angular
+      automatically checks host property bindings during change detection, and if a binding changes it updates the host
+      element of the directive.
+    </p>
+
+    <h3 class="mt-4">Hands-on link:</h3>
+    <hr>
+    <a href="https://stackblitz.com/edit/hostbinding-hostlistener-i7xcug" target="_blank">stackblitz</a><br />
+    <a href="https://stackblitz.com/edit/hostlistener-hostbinding" target="_blank">stackblitz</a>
+
+    <hr>
+    <ul>
+      <li><a href="https://angular.io/api/core/HostListener" target="_blank">angular.io</a></li>
+      <li><a href="https://angular.io/api/core/HostBinding" target="_blank">angular.io</a></li>
+      <li><a href="https://dzone.com/articles/what-are-hostbinding-and-hostlistener-in-angular"
+          target="_blank">dzone</a></li>
+    </ul>
+  </div>
 </main>
