--- a/src/app/topics/incerementaldomvsvirtual/incerementaldomvsvirtual.component.html
+++ b/src/app/topics/incerementaldomvsvirtual/incerementaldomvsvirtual.component.html
@@ -1,8 +1,17 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>what is incremental dom?what is differance between virtual and incremental dom</h2>
-      <a href="https://medium.com/google-developers/introducing-incremental-dom-e98f79ce2c5f" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>what is incremental dom?what is differance between virtual and incremental dom</h2>
+    <a href="https://medium.com/google-developers/introducing-incremental-dom-e98f79ce2c5f" target="_blank">I read this
+      article here</a>
+
+    <hr>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://medium.com/google-developers/introducing-incremental-dom-e98f79ce2c5f"
+      target="_blank">medium</a><br />
+    <a href="https://blog.nrwl.io/understanding-angular-ivy-incremental-dom-and-virtual-dom-243be844bf36"
+      target="_blank">nrwl</a>
+
+  </div>
 </main>
