--- a/src/app/topics/jitvsaot/jitvsaot.component.html
+++ b/src/app/topics/jitvsaot/jitvsaot.component.html
@@ -1,7 +1,42 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>what is differance between jit and aot?</h2>
-      <hr>
-      <a href="https://stackoverflow.com/questions/41450226/just-in-time-jit-vs-ahead-of-time-aot-compilation-in-angular" target="_blank">I read this article here</a>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>what is differance between jit and aot?</h2>
+    <hr>
+
+    <h4>JIT:</h4>
+    <p>In computing, just-in-time (JIT) compilation (also dynamic translation or run-time compilations) is a way of
+      executing computer code that involves compilation during execution of a program — at run time — rather than prior
+      to execution.Or stated more simply, it is that the code gets compiled when it is needed, not before runtime.
+    </p>
+    <p>In the beginning, a compiler was responsible for turning a high-level language into object code (machine
+      instructions), which would then be linked into an executable.
+
+      A just-in-time (JIT) compiler is a feature of the run-time interpreter, that instead of interpreting bytecode
+      every time a method is invoked, will compile the bytecode into the machine code instructions of the running
+      machine, and then invoke this object code instead.
+
+    </p>
+
+    <h4>AOT:</h4>
+    <p>In computer science, ahead-of-time compilation (AOT compilation) is the act of compiling a higher-level
+      programming language such as C or C++, or an intermediate representation such as Java bytecode or .NET Framework
+      Common Intermediate Language (CIL) code, into a native (system-dependent) machine code so that the resulting
+      binary file can execute natively.
+
+    </p>
+    <p>An ahead-of-time (AOT) compiler converts your code during the build time before the browser downloads and runs
+      that code. Compiling your application during the build process provides a faster rendering in the browser.
+
+    </p>
+
+    <h3 class="mt-4">Usefull links:</h3>
+    <hr>
+    <ul>
+      <li><a
+          href="https://levelup.gitconnected.com/just-in-time-jit-and-ahead-of-time-aot-compilation-in-angular-8529f1d6fa9d"
+          target="_blank">levelup.gitconnected</a></li>
+      <li><a href="https://medium.com/@jitubutwal144/basic-overview-of-just-in-time-jit-vs-ahead-of-time-aot-compilation-in-angular-applications-d24f04d8f7ca" target="_blank">medium</a></li>
+    </ul>
+
+  </div>
 </main>
