--- a/src/app/topics/preloadmodule/preloadmodule.component.html
+++ b/src/app/topics/preloadmodule/preloadmodule.component.html
@@ -1,8 +1,18 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>How to preload module in angular?. what are their practical usage</h2>
-      <a href="https://codeburst.io/preload-angular-modules-on-demand-c7a3310a0c5b" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>How to preload module in angular?. what are their practical usage</h2>
+    <a href="https://codeburst.io/preload-angular-modules-on-demand-c7a3310a0c5b" target="_blank">I read this article
+      here</a>
+
+    <hr>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ceMsvxyuc6Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://medium.com/razroo/preloading-modules-in-angular-f670f9df5269#:~:text=Lazy%20loading%20modules%20in%20Angular,loading%20can%20save%20you%20time."
+      target="_blank">medium</a><br />
+    <a href="https://angular.io/api/router/PreloadAllModules" target="_blank">angular.io</a><br />
+
+  </div>
 </main>
