--- a/src/app/topics/raceconditionangular/raceconditionangular.component.html
+++ b/src/app/topics/raceconditionangular/raceconditionangular.component.html
@@ -1,7 +1,21 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>what is race condition in angular?how to avoid that?</h2>
-      <hr>
-      <a href="https://medium.com/@milosbejda/avoiding-race-conditions-with-rxjs-switchmaps-310e14500dcc" target="_blank">I read this article here</a>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>what is race condition in angular?how to avoid that?</h2>
+    <hr>
+    <!-- <a href="https://medium.com/@milosbejda/avoiding-race-conditions-with-rxjs-switchmaps-310e14500dcc" target="_blank">I read this article here</a> -->
+
+    <iframe src="https://player.vimeo.com/video/137950379" width="640" height="360" frameborder="0"
+      allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+    <h3 class="mt-4">Usefull links:</h3>
+    <hr>
+    <ul>
+      <li><a
+          href="https://medium.com/@slavik57/async-race-conditions-in-javascript-526f6ed80665"
+          target="_blank">medium</a></li>
+      <li><a
+          href="https://medium.com/better-programming/handling-angular-forms-race-conditions-with-rxjs-b4e31bb73ba0"
+          target="_blank">medium</a></li>
+    </ul>
+  </div>
 </main>
