--- a/src/app/topics/reactiveformvalidations/reactiveformvalidations.component.html
+++ b/src/app/topics/reactiveformvalidations/reactiveformvalidations.component.html
@@ -1,8 +1,28 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>Explain reactiveform elements validations in angular</h2>
-      <a href="https://medium.com/rpdstartup/angular-form-validations-5d773a3e3b78" target="_blank">I read this article here</a>
-     
+  <div class="container-fluid default-bar">
+    <h2>Explain reactiveform elements validations in angular</h2>
+    <a href="https://medium.com/rpdstartup/angular-form-validations-5d773a3e3b78" target="_blank">I read this article
+      here</a>
+
+    <hr>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nofXAkAz05Q" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VLYc3ACWL-E" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+      <h3 class="mt-4">Hands-on link:</h3>
       <hr>
-    </div>
+      <a href="https://stackblitz.com/edit/angular-8-reactive-form-validation" target="_blank">stackblitz</a><br />
+      <a href="https://stackblitz.com/edit/angular-reactive-forms-validation" target="_blank">stackblitz</a>
+  
+      <hr>
+      <h3>See also:</h3>
+      <ul>
+        <li><a href="https://www.freecodecamp.org/news/how-to-validate-angular-reactive-forms/"
+            target="_blank">freecodecamp</a></li>
+        <li><a href="https://jasonwatmore.com/post/2018/05/10/angular-6-reactive-forms-validation-example"
+            target="_blank">jasonwatmore</a></li>
+      </ul>
+  </div>
 </main>
