--- a/src/app/topics/routeguard/routeguard.component.html
+++ b/src/app/topics/routeguard/routeguard.component.html
@@ -1,8 +1,23 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
       <h2>please explain different route guards? How would you protect a component being activated through the router?</h2>
-      <a href="https://blog.thoughtram.io/angular/2016/07/18/guards-in-angular-2.html" target="_blank">I read this article here</a>
+      <!-- <a href="https://blog.thoughtram.io/angular/2016/07/18/guards-in-angular-2.html" target="_blank">I read this article here</a> -->
      
       <hr>
+
+      <p>The Angular router’s navigation guards allow to grant or remove access to certain parts of the navigation. Another route guard, the CanDeactivate guard, even allows you to prevent a user from accidentally leaving a component with unsaved changes.
+      </p>
+      <p>Route guards are most often implemented as classes that implement the needed route guard interface.</p>
+      <h3 class="mt-4">Hands-on link:</h3>
+    <hr>
+    <a href="https://stackblitz.com/edit/angular-route-guards" target="_blank">stackblitz</a><br />
+    <a href="https://stackblitz.com/edit/angular-routing-guard" target="_blank">stackblitz</a>
+
+    <hr>
+    <ul>
+      <li><a href="https://codecraft.tv/courses/angular/routing/router-guards/" target="_blank">angular.io</a></li>
+      <li><a href="https://www.digitalocean.com/community/tutorials/angular-route-guards"
+          target="_blank">digitalocean</a></li>
+    </ul>
     </div>
 </main>
