--- a/src/app/topics/routerstatevsactivatedroute/routerstatevsactivatedroute.component.html
+++ b/src/app/topics/routerstatevsactivatedroute/routerstatevsactivatedroute.component.html
@@ -4,5 +4,11 @@
       <a href="https://vsavkin.com/angular-router-understanding-router-state-7b5b95a12eab" target="_blank">I read this article here</a>
      
       <hr>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/QWPH-Bz8Gsg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3 class="mt-4">See these link:</h3>
+      <hr>
+      <a href="https://vsavkin.com/angular-router-understanding-router-state-7b5b95a12eab#:~:text=RouterState%20and%20ActivatedRoute%20are%20similar,router%20can%20inject%20its%20ActivatedRoute."
+        target="_blank">vsavkin</a><br />
+      <a href="https://www.onlineinterviewquestions.com/list-out-the-differences-between-activat/" target="_blank">onlineinterviewquestions</a>
     </div>
 </main>
