--- a/src/app/topics/scss/scss.component.html
+++ b/src/app/topics/scss/scss.component.html
@@ -2,7 +2,20 @@
     <div class="container-fluid default-bar">
       <h2>what is scss? what are their practical usage? please provide examples</h2>
       <hr>
-      <a href="https://medium.com/@js_tut/the-complete-guide-to-scss-sass-30053c266b23" target="_blank">I read this article here</a>
-    </div>
+      <p>Scss is Sassy Cascading Style Sheets</p>
+
+      <p>Scss can be separated by a semicolon and run on the same line</p>
+      
+      <p>SCSS is a preprocessor which lets you use features that aren’t a part of the wider CSS standard yet, and provides better workflows for maintaining your stylesheets.</p>
+      
+      <p>With SCSS preprocessor, you can reduce the amount of times you repeat yourself and ensure you’re writing clean, maintainable code for the future.</p>
+      
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.dailysmarty.com/posts/what-is-scss" target="_blank">dailysmarty</a></li>
+          <li><a href="https://sass-lang.com/guide" target="_blank">sass-lang.com</a></li>
+      </ul>
+      </div>
 </main>
  
