--- a/src/app/topics/smartdumbcomponent/smartdumbcomponent.component.html
+++ b/src/app/topics/smartdumbcomponent/smartdumbcomponent.component.html
@@ -1,7 +1,8 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
       <h2>What is the difference between a smart/container component and dumb/presentational component? What is a good use case example? What are the advantages?</h2>
-      <a href="https://medium.com/@jtomaszewski/how-to-write-good-composable-and-pure-components-in-angular-2-1756945c0f5b" target="_blank">I read this article here</a>
+      <!-- <a href="https://medium.com/@jtomaszewski/how-to-write-good-composable-and-pure-components-in-angular-2-1756945c0f5b" target="_blank">I read this article here</a> -->
       <hr>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TzrZNpSfswA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </main>
