--- a/src/app/topics/solidprinciples/solidprinciples.component.html
+++ b/src/app/topics/solidprinciples/solidprinciples.component.html
@@ -1,7 +1,14 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>example of SOLID Principles in JS? what are their practical usage? please provide examples</h2>
-      <a href="https://medium.com/javascript-in-plain-english/rethinking-solid-principles-in-javascript-7effdd4dc37d" target="_blank">I read this article here</a>
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>example of SOLID Principles in JS? what are their practical usage? please provide examples</h2>
+    <a href="https://medium.com/javascript-in-plain-english/rethinking-solid-principles-in-javascript-7effdd4dc37d"
+      target="_blank">I read this article here</a>
+    <hr>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://www.infoq.com/news/2014/01/solid-principles-javascript/" target="_blank">infoq</a><br />
+    <a href="https://medium.com/@cramirez92/s-o-l-i-d-the-first-5-priciples-of-object-oriented-design-with-javascript-790f6ac9b9fa" target="_blank">medium</a><br />
+
+  </div>
 </main>
