--- a/src/app/topics/templatereferancevariable/templatereferancevariable.component.html
+++ b/src/app/topics/templatereferancevariable/templatereferancevariable.component.html
@@ -1,8 +1,20 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>What is a template variable. How would you use it?. what are their practical usage</h2>
-      <a href="https://itnext.io/working-with-angular-5-template-reference-variable-e5aa59fb9af" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>What is a template variable. How would you use it?. what are their practical usage</h2>
+    <!-- <a href="https://itnext.io/working-with-angular-5-template-reference-variable-e5aa59fb9af" target="_blank">I read this article here</a> -->
+
+    <hr>
+    <p>A template reference variable is often a reference to a DOM element within a template. It can also refer to a directive (which contains a component), an element, TemplateRef, or a web component.</p>
+    <h3 class="mt-4">Hands-on link:</h3>
+    <hr>
+    <a href="https://stackblitz.com/edit/angular-template-reference-variable" target="_blank">stackblitz</a><br />
+    <a href="https://stackblitz.com/edit/angular-2-template-reference-variable" target="_blank">stackblitz</a>
+
+    <hr>
+    <ul>
+      <li><a href="https://angular.io/guide/template-reference-variables" target="_blank">angular.io</a></li>
+      <li><a href="https://itnext.io/working-with-angular-5-template-reference-variable-e5aa59fb9af"
+          target="_blank">itnext</a></li>
+    </ul>
+  </div>
 </main>
