--- a/src/app/topics/thiskeyword/thiskeyword.component.html
+++ b/src/app/topics/thiskeyword/thiskeyword.component.html
@@ -2,7 +2,23 @@
     <div class="container-fluid default-bar">
       <h2>how this keyword define in JS? please provide examples</h2>
       <hr>
-      <a href="https://medium.com/cold-brew-code/a-short-guide-to-understanding-javascripts-this-keyword-a643620c5667" target="_blank">I read this article here</a>
+      
+      <p>
+        A function's this keyword behaves a little differently in JavaScript compared to other languages. It also has some differences between strict mode and non-strict mode.
+      </p>
+
+
+      <p>
+        In most cases, the value of this is determined by how a function is called (runtime binding). It can't be set by assignment during execution, and it may be different each time the function is called. ES5 introduced the bind() method to set the value of a function's this regardless of how it's called, and ES2015 introduced arrow functions which don't provide their own this binding (it retains the this value of the enclosing lexical context).
+      </p>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/this" target="_blank">developer.mozilla</a></li>
+          <li><a href="https://www.tutorialsteacher.com/javascript/this-keyword-in-javascript" target="_blank">tutorialsteacher</a></li>
+      </ul>
+
+
     </div>
 </main>
  
