--- a/src/app/topics/transducers/transducers.component.html
+++ b/src/app/topics/transducers/transducers.component.html
@@ -1,7 +1,14 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>example of transducers? what are their practical usage? please provide examples</h2>
-      <a href="https://medium.com/javascript-scene/transducers-efficient-data-processing-pipelines-in-javascript-7985330fe73d" target="_blank">I read this article here</a>
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>example of transducers? what are their practical usage? please provide examples</h2>
+    <a href="https://medium.com/javascript-scene/transducers-efficient-data-processing-pipelines-in-javascript-7985330fe73d"
+      target="_blank">I read this article here</a>
+    <hr>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://medium.com/javascript-scene/transducers-efficient-data-processing-pipelines-in-javascript-7985330fe73d#:~:text=They're%20made%20from%203%20different%20functions.&text=Instead%20of%20using%20function%20arity,call%20the%20next%20step()%20)." target="_blank">medium</a><br />
+    <a href="https://raganwald.com/2017/04/30/transducers.html" target="_blank">raganwald</a><br />
+
+  </div>
 </main>
