--- a/src/app/topics/asyncperformace/asyncperformace.component.html
+++ b/src/app/topics/asyncperformace/asyncperformace.component.html
@@ -1,7 +1,14 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>What happens if you subscribe to a data source multiple times with async pipe?</h2>
-      <a href="https://stackoverflow.com/questions/40742181/performance-of-using-same-observable-in-multiple-places-in-template-with-async-p" target="_blank">I read this article here</a> 
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>What happens if you subscribe to a data source multiple times with async pipe?</h2>
+    <a href="https://stackoverflow.com/questions/40742181/performance-of-using-same-observable-in-multiple-places-in-template-with-async-p"
+      target="_blank">I read this article here</a>
+    <hr>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://nitayneeman.com/posts/using-single-subscription-for-multiple-async-pipes-in-angular/" target="_blank">stackblitz</a><br />
+    <a href="https://medium.com/@yurykatkov/how-to-avoid-multiple-async-pipes-in-angular-ff0d51a8d368" target="_blank">stackblitz</a>
+
+  </div>
 </main>
