--- a/src/app/topics/callapplyjs/callapplyjs.component.html
+++ b/src/app/topics/callapplyjs/callapplyjs.component.html
@@ -1,7 +1,27 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>example of call and apply? what are their practical usage? please provide examples</h2>
-      <a href="https://medium.com/javascript-in-plain-english/call-and-apply-js-cf3a480b73ad" target="_blank">I read this article here</a>
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>example of call and apply? what are their practical usage? please provide examples</h2>
+    <a href="https://medium.com/javascript-in-plain-english/call-and-apply-js-cf3a480b73ad" target="_blank">I read this
+      article here</a>
+    <hr>
+
+    <h4>Apply:</h4>
+    <p>The apply() method is an important method of the function prototype and is used to call other functions with a
+      provided this keyword value and arguments provided in the form of array or an array like object. It returns the
+      result of the function which is invoked by this.
+    </p>
+
+    <h4>Call:</h4>
+    <p>The call() method is used to call a function with a given this and arguments provided to it individually. The
+      result of calling the function with the specified this value and arguments.
+    </p>
+
+    <h3 class="mt-4">See these link:</h3>
+    <hr>
+    <a href="https://www.freecodecamp.org/news/how-to-use-the-apply-call-and-bind-methods-in-javascript-80a8e6096a90/"
+      target="_blank">freecodecamp</a><br />
+    <a href="https://blog.bitsrc.io/understanding-call-bind-and-apply-methods-in-javascript-33dbf3217be" target="_blank">bitsrc</a>
+
+
+  </div>
 </main>
