--- a/src/app/topics/commonmodules/commonmodules.component.html
+++ b/src/app/topics/commonmodules/commonmodules.component.html
@@ -1,7 +1,25 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>What are the common modules and ngmodules automatically added in angular apps? What error it will give if we do not add it.</h2>
-      <hr>
-      <a href="https://medium.com/@cyrilletuzi/understanding-angular-modules-ngmodule-and-their-scopes-81e4ed6f7407" target="_blank">I read this article here</a>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>What are the common modules and ngmodules automatically added in angular apps? What error it will give if we do
+      not add it.</h2>
+    <hr>
+    <!-- <a href="https://medium.com/@cyrilletuzi/understanding-angular-modules-ngmodule-and-their-scopes-81e4ed6f7407" target="_blank">I read this article here</a> -->
+    <h4>JavaScript modules:</h4>  
+    <p>JavaScript modules and NgModules can help you modularize your code, but they are very different. Angular apps rely on both kinds of modules.
+    </p>
+    <h4>NgModules:</h4>
+    <p>An NgModule is a class marked by the @NgModule decorator with a metadata object that describes how that particular part of the app fits together with the other parts. NgModules are specific to Angular. While classes with an @NgModule decorator are by convention kept in their own files, they differ from JavaScript modules because they include this metadata.
+    </p>
+    <p>The @NgModule metadata plays an important role in guiding the Angular compilation process that converts the app code you write into highly performant JavaScript code. The metadata describes how to compile a component's template and how to create an injector at runtime. It identifies the NgModule's components, directives, and pipes, and makes some of them public through the exports property so that external components can use them. You can also use an NgModule to add providers for services, so that the services are available elsewhere in your app.
+    </p>
+    <h3 class="mt-4">Usefull links:</h3>
+    <hr>
+    <ul>
+      <li><a href="https://angular.io/guide/ngmodule-vs-jsmodule"
+          target="_blank">angular.io</a></li>
+      <li><a href="https://medium.com/@cyrilletuzi/understanding-angular-modules-ngmodule-and-their-scopes-81e4ed6f7407"
+          target="_blank">medium</a></li>
+    </ul>
+
+  </div>
 </main>
