--- a/src/app/topics/routeroutler/routeroutler.component.html
+++ b/src/app/topics/routeroutler/routeroutler.component.html
@@ -1,8 +1,29 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>what is router outlet?</h2>
-      <a href="https://indepth.dev/angular-router-series-secondary-outlets-primer/" target="_blank">I read this article here</a>
-     
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>what is router outlet?</h2>
+    <a href="https://indepth.dev/angular-router-series-secondary-outlets-primer/" target="_blank">I read this article
+      here</a>
+
+    <hr>
+
+    <p>Router-outlet in Angular works as a placeholder which is used to load the different components dynamically based
+      on the activated component or current route state. Navigation can be done using router-outlet directive and the
+      activated component will take place inside the router-outlet to load its content.
+    </p>
+
+    <h3 class="mt-4">Hands-on link:</h3>
+    <hr>
+    <a href="https://stackblitz.com/edit/angular-router-outlets"
+      target="_blank">stackblitz</a><br />
+    <a href="https://stackblitz.com/edit/multi-router-outlet" target="_blank">stackblitz</a>
+
+    <hr>
+    <h3>See also:</h3>
+    <ul>
+      <li><a href="https://www.c-sharpcorner.com/blogs/routeroutlet-in-angular" target="_blank">c-sharpcorner</a></li>
+      <li><a href="https://www.smashingmagazine.com/2018/11/a-complete-guide-to-routing-in-angular/"
+          target="_blank">smashingmagazine</a></li>
+    </ul>
+
+  </div>
 </main>
